# dnscrypt-proxy

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test-container.sh  test-image.sh  test-sanity.sh  test_container.py  test_dnscrypt_proxy.py  test_sanity.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docker.yaml
tests/: README.md  conftest.py  test_dnscrypt_proxy.py
